--- a/lib/frontend/css/common.css
+++ b/lib/frontend/css/common.css
@@ -10,7 +10,11 @@
 .sv100_sv_sidebar .widget .widget-title {
 	margin: 0 0 1rem;
 }
-
+.sv100_sv_sidebar .widget ul {
+	list-style-type:none;
+	margin:0;
+	padding:0;
+}
 .sv100_sv_sidebar .widget li {
 	margin: .3rem 0 0 0;
 }
