FIX IMAGE SIZING

--- a/lib/css/common/common.css
+++ b/lib/css/common/common.css
@@ -137,6 +137,7 @@
 }
 
 /* Textwidget */
-.sv100_sv_sidebar .textwidget{
-	display:inline-block;
+.sv100_sv_sidebar .textwidget img{
+	max-width:100%;
+	height:auto;
 }
