--- a/lib/css/common/common.css
+++ b/lib/css/common/common.css
@@ -1,4 +1,3 @@
-/* Widget Base ------------------------------- */
 .sv100_sv_sidebar .widget ul {
 	list-style-type:none;
 	margin:0;
@@ -11,133 +10,48 @@
 	margin-top: 0;
 }
 
-.sv100_sv_sidebar .widget table caption {
-	font-weight: 700;
-	font-size: 1.2em;
-	margin-bottom: .5rem;
-	background-color: transparent;
+/* Widgets  - General */
+.sv100_sv_sidebar .widget {
+	margin-bottom: 30px;
 }
 
-.sv100_sv_sidebar .widget .post-date,
-.sv100_sv_sidebar .widget .rss-date {
-	display: block;
-	font-size: 0.85em;
-	font-weight: 500;
-	margin-top: .2rem;
+.sv100_sv_sidebar .widget a {
+	text-decoration: none;
+	transition: .25s ease;
 }
 
-.sv100_sv_sidebar .widget select {
-	max-width: 100%;
-}
-
-/* Base List Widget -------------------------- */
-.sv100_sv_sidebar .widget_archive ul,
-.sv100_sv_sidebar .widget_categories ul,
-.widget_pages ul,
-.sv100_sv_sidebar .widget_meta ul,
-.sv100_sv_sidebar .widget_nav_menu ul,
-.sv100_sv_sidebar .widget_recent_comments ul,
-.sv100_sv_sidebar .widget_recent_entries ul,
-.sv100_sv_sidebar .widget_rss ul {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-	margin: 0;
+.sv100_sv_sidebar .widget ul {
 	padding: 0;
+	list-style-type: none;
 }
 
-/* Calendar -------------------------- */
-.sv100_sv_sidebar .calendar_wrap th,
-.sv100_sv_sidebar .calendar_wrap td,
-.sv100_sv_sidebar .wp-calendar-nav span {
-	display: table-cell;
-	line-height: 1;
-	padding: 2.5% 2.5% 1.75% 2.5%;
-	text-align: center;
-}
-
-.sv100_sv_sidebar .wp-calendar-table {
-	margin-bottom: 0;
-}
-
-.sv100_sv_sidebar .wp-calendar-nav {
-	display: table;
+.sv100_sv_sidebar .widget ul li {
+	margin-bottom: .3em;
+	display: flex;
+	flex-direction:column;
+	align-content: flex-start;
 	width: 100%;
-}
-
-.sv100_sv_sidebar .calendar_wrap tfoot td {
-	border-bottom: none;
-}
-
-.sv100_sv_sidebar .calendar_wrap tfoot #prev,
-.sv100_sv_sidebar .calendar_wrap .wp-calendar-nav-prev {
-	text-align: left;
-}
-
-.sv100_sv_sidebar .calendar_wrap tfoot #next,
-.sv100_sv_sidebar .calendar_wrap .wp-calendar-nav-next {
-	text-align: right;
-}
-
-/* Gallery --------------------------- */
-.sv100_sv_sidebar .widget_media_gallery .gallery {
-	display: flex;
 	flex-wrap: wrap;
-	margin: 0 -.4em -.8em -.4em;
-	width: calc(100% + .8em);
-}
-
-.sv100_sv_sidebar .widget_media_gallery .gallery-item {
-	margin: 0 0 .4em 0;
-	padding: 0 .4em;
-}
-
-
-/* RSS ------------------------------- */
-.sv100_sv_sidebar .widget_rss .widget-title a.rsswidget:first-of-type {
-	display: none;
-}
-
-.sv100_sv_sidebar .widget_rss .rssSummary {
-	margin-top: .5rem;
-}
-
-.sv100_sv_sidebar .widget_rss cite::before {
-	content: "— ";
-}
-
-/* Search ---------------------------- */
-.sv100_sv_sidebar .widget_search form {
-	display: flex;
-}
-
-.sv100_sv_sidebar .widget_search .screen-reader-text {
-	display: none;
-}
-
-.sv100_sv_sidebar .widget_search input {
-	border-width: 1px;
-	border-style: solid;
-	background-color: transparent;
-	padding: .3rem .5rem;
-	height: 2.5rem;
-}
-
-.sv100_sv_sidebar .widget_search input.search-submit {
-	border-left: 0;
-	padding: .3rem .8rem;
+	text-decoration: none;
 	cursor: pointer;
+	align-items: center;
+	transition: color .25s ease, background-color .25s ease;
 }
 
-/* Tag Cloud ------------------------- */
-.sv100_sv_sidebar .widget_tag_cloud a {
-	font-weight: 700;
-	margin-right: .5rem;
-	white-space: nowrap;
+.sv100_sv_sidebar .widget ul li a {
+	flex: 1;
+	transition: color .25s ease, background-color .25s ease;
 }
 
-/* Textwidget */
-.sv100_sv_sidebar .textwidget img{
+.sv100_sv_sidebar .widget ul li .post-date {
+	margin-right: 12px;
+}
+
+.sv100_sv_sidebar .widget .screen-reader-text {
+	display: none;
+}
+.sv100_sv_sidebar .widget figure,
+.sv100_sv_sidebar .widget img
+{
 	max-width:100%;
-	height:auto;
 }
